Fix placeholder spacing

--- a/sportshack/predictor/static/predictor/css/style.css
+++ b/sportshack/predictor/static/predictor/css/style.css
@@ -114,3 +114,10 @@ main {
 .login-block button:hover {
     background: #ff7b81;
 }
+
+input, input[placeholder]{
+font-weight:bold;
+    color:red;
+    text-align:center;
+
+}
